# blitz_work

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
blitz_work/: atomatic.py  blitzcrud.py  fields.py  forms.py  internationalization.py  urls.py
blitz_work/static/css/: blitz.css  bootstrap.min.css.map:Zone.Identifier  select2-bootstrap-dark.min.css  select2-bootstrap.min.css
blitz_work/static/doc/css/: basic.css
blitz_work/static/doc/js/: basic.js
blitz_work/static/js/: blitz.js
blitz_work/templates/: blitz_base.html  blitz_base_crud.html  blitz_base_light_dark.html  blitz_base_offline.html  blitz_crud_create.html  blitz_crud_delete.html  blitz_crud_detail.html  blitz_crud_search.html  blitz_crud_table.html  blitz_crud_update.html  dark_mode_switch.html
blitz_work/templates/components/: blitz_form.html  blitz_multiform.html  check_radio.html  modal_form.html  select.html
blitz_work/templates/doc/: base.html  index.html
blitz_work/templates/doc/content/: blitz.html  blitzcrud.html  blitzjs.html  create.html  crud.html  delete.html  detail.html  form.html  search.html  table.html  update.html  urls.html
blitz_work/templates/doc/en/: base.html  index.html
blitz_work/templates/doc/en/content/: blitz.html  blitzcrud.html  blitzjs.html  create.html  crud.html  delete.html  detail.html  form.html  search.html  switch.html  table.html  update.html  urls.html
blitz_work/templates/doc/es/: base.html  index.html
blitz_work/templates/doc/es/content/: blitz.html  blitzcrud.html  blitzjs.html  create.html  crud.html  delete.html  detail.html  (+6 more)
