[metadata]
name = blitz_work
version = 0.1.7
description = Django-based framework for rapid application development.
long_description = file: README.md
author = Eduardo Alejandro Leyva Piñeda,
author_email = lordedward98@gmail.com
license = MIT-License
classifiers = 
	Environment :: Web Environment
	Framework :: blitz_work
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

